web/css/umnhf-drupal.css
/* ... */
.umnhf-campus-m #umnhf-h.umnhf .umn-morris-header-logo {
  background-color: #8c1919;
  background-image: url(../img/umm-nod2d-transparent.png);
  background-size: 410px 159px;
  background-repeat: no-repeat;
  float: left;
  margin-top: 10px;
  width: 374px;
  height: 62px;
}
.umnhf-campus-m #umnhf-h.umnhf nav {
  font-family: "Avenir LT W01 85 Heavy", arial, sans-serif;
  float: right;
}
.umnhf-campus-m #umnhf-h.umnhf nav ul {
  text-align: right;
  list-style: none;
  margin: 0;
  padding: 0;
}
.umnhf-campus-m #umnhf-h.umnhf nav ul li {
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  display: inline-block;
  padding: 0 10px;
}
.umnhf-campus-m #umnhf-h.umnhf nav ul li a {
  color: #fff;
  text-decoration: none;
}
.umnhf-campus-m #umnhf-h.umnhf nav ul li a:hover {
  text-decoration: underline;
}
.umnhf-campus-m #umnhf-h.umnhf nav ul .gold-divider {
  border-left: 2px solid #e19b14;
  margin-left: 10px;
  padding-left: 20px;
}
.umnhf-campus-m #umnhf-m-search {
  display: none;
}
.umnhf-campus-m #umnhf-h #umnhf-h-search {
  top: 0;
}
.umnhf-campus-m .search-aria-wrapper {
  position: relative;
  top: 17px;
  float: right;
  clear: right;
}

@media only screen and (-webkit-min-device-pixel-ratio: 1.1), only screen and (min-device-pixel-ratio: 1.1) {
  .umnhf-campus-m #umnhf-h.umnhf .umn-morris-header-logo {
    background-image: url(../img/umm-nod2d-transparent@2x.png);
    background-size: 410px 159px;
  }
}
@media screen and (min-width: 1200px) {
  nav {
    -webkit-border-radius: 0 0 5px 0;
    -moz-border-radius: 0 0 5px 0;
    border-radius: 0 0 5px 0;
  }
}
@media screen and (max-width: 900px) {
  nav {
    width: 100%;
  }
}
@media screen and (min-width: 610px) {
  nav {
    background: #8c1919;
    background: -moz-linear-gradient(left, #8c1919 0%, #9c3b3b 60%);
    background: -webkit-gradient(linear, left top, right top, color-stop(0%, #8c1919), color-stop(60%, #9c3b3b));
    background: -webkit-linear-gradient(left, #8c1919 0%, #9c3b3b 60%);
    background: -o-linear-gradient(left, #8c1919 0%, #9c3b3b 60%);
    background: -ms-linear-gradient(left, #8c1919 0%, #9c3b3b 60%);
    background: linear-gradient(to right, #8c1919 0%, #9c3b3b 60%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8c1919', endColorstr='#9c3b3b',GradientType=1 );
  }
}
@media screen and (max-width: 609px) {
  .umnhf-campus-m #umnhf-h.umnhf {
    padding: 0;
  }
  .umnhf-campus-m #umnhf-h.umnhf nav {
    background-color: #9c3b3b;
  }
  .umnhf-campus-m #umnhf-h.umnhf nav ul li {
    font-size: 11px;
    line-height: 22px;
    text-align: center;
    display: block;
    float: left;
    width: 33.33%;
  }
  .umnhf-campus-m #umnhf-h.umnhf nav ul .gold-divider {
    border-left: none;
    margin-left: 0;
    padding-left: 10px;
  }
  .umnhf-campus-m #umnhf-h.umnhf .umn-morris-header-logo {
    background-position: 0 -62px;
    margin-top: 0;
    width: 250px;
    height: 50px;
  }
  .umnhf-campus-m #umnhf-h.umnhf button#umnhf-m-search {
    position: relative;
    top: 12px;
    float: right;
  }
  .umnhf-campus-m #umnhf-h.umnhf button#umnhf-m-search.mobile {
    left: auto;
    margin-bottom: 24px;
    height: auto;
    width: auto;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
  }
  .umnhf-campus-m #umnhf-h.umnhf .search-aria-wrapper {
    top: 0;
    right: 20px;
  }
}

